# AK-2-HW-3

./: CMakeLists.txt  IV-82_Zakharchuk.docx  Readme.md  main.cpp
